Social buttons background and icons

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -110,19 +110,25 @@
                 android:layout_marginEnd="6dp"
                 android:layout_marginRight="6dp"
                 android:layout_weight="1"
+                android:background="@color/facebook_button"
+                android:drawableLeft="@drawable/facebook"
+                android:drawableStart="@drawable/facebook"
+                android:text="Facebook"
                 android:textAllCaps="false"
-                android:background="#eee"
-                android:text="Facebook" />
+                android:textColor="#FFF" />
 
             <Button
                 android:id="@+id/btnIngresarGoogle"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#eee"
+                android:background="@color/google_button"
+                android:drawableLeft="@drawable/google"
+                android:drawableStart="@drawable/google"
                 android:gravity="center"
                 android:text="Google"
-                android:textAllCaps="false" />
+                android:textAllCaps="false"
+                android:textColor="#FFF" />
         </LinearLayout>
 
 
@@ -130,7 +136,7 @@
             android:id="@+id/btnRegistrarme"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
+            android:layout_marginTop="8dp"
             android:gravity="center"
             android:text="Soy usuario nuevo"
             android:textColor="#FFF"
