--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,8 @@
     <color name="cementDark">#5D6255</color>
 
     <color name="orange">#F46836</color>
+
+    <!-- Social buttons background -->
+    <color name="facebook_button">#415DAD</color>
+    <color name="google_button">#EA4B57</color>
 </resources>
