--- a/app/src/main/res/layout/activity_talk.xml
+++ b/app/src/main/res/layout/activity_talk.xml
@@ -63,7 +63,12 @@
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="12dp" />
+                android:paddingBottom="8dp"
+                android:paddingEnd="4dp"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp"
+                android:paddingStart="4dp"
+                android:paddingTop="8dp" />
 
         </ScrollView>
 
@@ -74,38 +79,48 @@
             android:background="@color/cement"
             android:orientation="horizontal"
             android:paddingBottom="8dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
+            android:paddingEnd="12dp"
+            android:paddingLeft="2dp"
+            android:paddingRight="12dp"
+            android:paddingStart="2dp"
             android:paddingTop="8dp">
 
+            <ImageView
+                android:id="@+id/btnImage"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:padding="5dp"
+                android:src="@drawable/subir" />
+
             <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
 
                 <EditText
                     android:id="@+id/etMessage"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
                     android:layout_gravity="center"
+                    android:background="@drawable/edit_text_style"
                     android:hint="Escribir mensaje"
                     android:minHeight="43dp"
-                    android:background="@drawable/edit_text_style"
-                    android:layout_centerVertical="true"
-                    android:paddingStart="12dp"
-                    android:paddingLeft="12dp"
                     android:paddingEnd="42dp"
+                    android:paddingLeft="12dp"
                     android:paddingRight="42dp"
+                    android:paddingStart="12dp"
                     android:singleLine="true" />
 
                 <ImageView
                     android:id="@+id/btnSend"
                     android:layout_width="40dp"
-                    android:padding="5dp"
                     android:layout_height="40dp"
                     android:layout_alignBottom="@+id/etMessage"
                     android:layout_alignEnd="@+id/etMessage"
                     android:layout_alignRight="@+id/etMessage"
                     android:layout_alignTop="@+id/etMessage"
+                    android:padding="5dp"
                     android:src="@drawable/send" />
 
             </RelativeLayout>
