--- a/app/src/main/res/layout/item_message_right.xml
+++ b/app/src/main/res/layout/item_message_right.xml
@@ -2,37 +2,27 @@
     android:id="@+id/rel_layout_left"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="right"
+    android:layout_marginTop="1dp"
     android:background="#dfdfdf"
-    android:orientation="vertical"
-    android:layout_marginTop="1dp">
-
-    <ImageView
-        android:id="@+id/ivBubbleLeft"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginRight="-13dp"
-        android:src="@drawable/ic_bubble_corner" />
+    android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/ivBubbleLeft"
-        android:layout_toEndOf="@+id/ivBubbleLeft"
-        android:layout_toLeftOf="@+id/ivBubbleRight"
-        android:layout_toStartOf="@+id/ivBubbleRight"
-        android:background="@drawable/bg_msg_from"
+        android:background="@drawable/globo1"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tvTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
-            android:paddingRight="5dp"
+            android:layout_gravity="bottom|end"
             android:paddingEnd="5dp"
+            android:paddingRight="5dp"
             android:text="4:13 PM"
             android:textColor="@android:color/darker_gray"
             android:textSize="10sp"
@@ -42,24 +32,28 @@
             android:id="@+id/tvMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left|center_vertical"
+            android:layout_gravity="right|center_vertical"
             android:layout_marginTop="1dp"
             android:paddingBottom="5dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:paddingTop="5dp"
-            android:text="Texto de prueba          "
+            android:text="Mensaje de prueba          "
             android:textColor="#484848"
             android:textSize="16sp" />
+
+        <com.youtube.sorcjc.proyectoprofesionales.ui.custom.AspectRatioImageView
+            android:id="@+id/ivImagen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:minHeight="30dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
+            android:paddingTop="6dp"
+            android:visibility="gone" />
     </FrameLayout>
 
-    <ImageView
-        android:id="@+id/ivBubbleRight"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginLeft="-13dp"
-        android:src="@drawable/ic_bubble_right" />
-    
+
 </RelativeLayout>
