--- a/app/src/main/res/layout/actionbar_talk.xml
+++ b/app/src/main/res/layout/actionbar_talk.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/com_facebook_profile_picture_blank_square" />
+        android:src="@drawable/avatar_default" />
 
     <LinearLayout
         android:layout_width="0dp"
