--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:facebook="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary">
@@ -22,7 +21,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Nombre:"
+                android:text="@string/field_name"
                 android:textColor="#FFF"
                 android:textSize="16sp" />
 
@@ -52,7 +51,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Mail:"
+                android:text="@string/field_email"
                 android:textColor="#FFF"
                 android:textSize="16sp" />
 
@@ -80,7 +79,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Contraseña:"
+                android:text="@string/field_password"
                 android:textColor="#FFF"
                 android:textSize="16sp" />
 
@@ -114,7 +113,7 @@
             android:layout_marginBottom="12dp"
             android:layout_marginTop="6dp"
             android:background="@color/orange"
-            android:text="Registrarme"
+            android:text="@string/btn_register"
             android:textAllCaps="false"
             android:textColor="#FFF"
             android:textSize="18sp" />
@@ -124,7 +123,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
             android:gravity="center"
-            android:text="Ingresar con"
+            android:text="@string/lbl_login_with"
             android:textColor="#FFF"
             android:textSize="16sp" />
 
@@ -169,7 +168,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:gravity="center"
-            android:text="Ya soy usuario"
+            android:text="@string/btn_i_am_user"
             android:textColor="#FFF"
             android:textSize="18sp" />
 
