--- a/app/src/main/res/layout/activity_talk.xml
+++ b/app/src/main/res/layout/activity_talk.xml
@@ -86,11 +86,12 @@
             android:paddingTop="8dp">
 
             <ImageView
+                android:layout_gravity="center"
                 android:id="@+id/btnImage"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:padding="5dp"
-                android:src="@drawable/subir" />
+                android:padding="2dp"
+                android:src="@android:drawable/ic_menu_camera" />
 
             <RelativeLayout
                 android:layout_width="0dp"
