--- a/app/src/main/res/menu/menu_panel.xml
+++ b/app/src/main/res/menu/menu_panel.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:icon="@android:drawable/ic_lock_power_off"
+        android:icon="@drawable/settings"
         android:title="@string/action_settings"
         app:showAsAction="ifRoom" />
 </menu>
