--- a/app/src/main/res/layout/item_info.xml
+++ b/app/src/main/res/layout/item_info.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="3dp"
-    app:cardElevation="2dp"
-    android:layout_marginBottom="8dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
+    android:visibility="gone"
+    app:cardCornerRadius="3dp"
+    app:cardElevation="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="12dp">
+
         <TextView
             android:id="@+id/tvTitulo"
             android:layout_width="match_parent"
@@ -25,8 +26,8 @@
             android:id="@+id/tvContenido"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:text="Contenido\nContenido" />
+            android:text="Contenido\nContenido"
+            android:textSize="15sp" />
 
     </LinearLayout>
 
