--- a/app/src/main/res/drawable/bg_chat_left.xml
+++ b/app/src/main/res/drawable/bg_chat_left.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="#F1F1F1" >
+    <solid android:color="@color/chat_left_color" >
     </solid>
 
     <corners android:radius="5dp" >
