--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -106,8 +106,6 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_marginEnd="6dp"
-                android:layout_marginRight="6dp"
                 android:layout_weight="1"
                 android:background="@color/facebook_button"
                 android:drawableLeft="@drawable/facebook"
@@ -117,6 +115,7 @@
                 android:textColor="#FFF" />
 
             <Button
+                android:visibility="gone"
                 android:id="@+id/btnIngresarGoogle"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
