--- a/app/src/main/res/layout/activity_panel.xml
+++ b/app/src/main/res/layout/activity_panel.xml
@@ -23,6 +23,11 @@
             app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/logo" />
+
         </android.support.v7.widget.Toolbar>
 
         <android.support.design.widget.TabLayout
