--- a/app/src/main/res/layout/activity_talk.xml
+++ b/app/src/main/res/layout/activity_talk.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#dfdfdf"
+        android:background="@color/chat_color"
         android:orientation="vertical">
 
         <android.support.design.widget.AppBarLayout
