--- a/app/src/main/res/layout/item_message_left.xml
+++ b/app/src/main/res/layout/item_message_left.xml
@@ -2,24 +2,38 @@
     android:id="@+id/rel_layout_left"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="1dp"
-    android:background="#dfdfdf"
+    android:layout_margin="4dp"
+    android:background="@color/chat_color"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/triangle_left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/chat_left"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        />
+
     <FrameLayout
+        android:layout_marginLeft="4dp"
+        android:layout_marginStart="4dp"
+        android:layout_toRightOf="@+id/triangle_left"
+        android:layout_toEndOf="@+id/triangle_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="@drawable/globo2"
+        android:background="@drawable/bg_chat_left"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tvTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
+            android:layout_gravity="bottom|end"
             android:paddingEnd="5dp"
             android:paddingRight="5dp"
             android:text="4:13 PM"
