--- a/app/src/main/res/layout/item_message_right.xml
+++ b/app/src/main/res/layout/item_message_right.xml
@@ -2,9 +2,9 @@
     android:id="@+id/rel_layout_left"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="right"
-    android:layout_marginTop="1dp"
-    android:background="#dfdfdf"
+    android:layout_gravity="end"
+    android:layout_margin="4dp"
+    android:background="@color/chat_color"
     android:orientation="vertical">
 
     <FrameLayout
@@ -13,8 +13,12 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:background="@drawable/globo1"
-        android:orientation="horizontal">
+        android:background="@drawable/bg_chat_right"
+        android:orientation="horizontal"
+        android:layout_marginRight="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_toLeftOf="@+id/triangle_right"
+        android:layout_toStartOf="@+id/triangle_right">
 
         <TextView
             android:id="@+id/tvTime"
@@ -55,5 +59,14 @@
             android:visibility="gone" />
     </FrameLayout>
 
+    <ImageView
+        android:id="@+id/triangle_right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/chat_right"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        />
 
 </RelativeLayout>
