--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -26,7 +26,7 @@
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/avatar_default"
+                android:src="@drawable/profile_default"
                 app:layout_collapseMode="parallax" />
 
             <android.support.v7.widget.Toolbar
