--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="2dp"
     app:cardElevation="2dp">
 
     <LinearLayout
+        android:id="@+id/layout_info"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
@@ -14,47 +15,47 @@
 
         <ImageView
             android:id="@+id/ivPhoto"
-            android:src="@drawable/com_facebook_profile_picture_blank_square"
-            android:scaleType="centerCrop"
             android:layout_width="62dp"
             android:layout_height="62dp"
-            android:layout_gravity="left"/>
+            android:layout_gravity="left"
+            android:scaleType="centerCrop"
+            android:src="@drawable/com_facebook_profile_picture_blank_square" />
 
         <LinearLayout
             android:id="@+id/contact_info"
-            android:layout_marginRight="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_gravity="center"
-            android:orientation="vertical"
-            android:gravity="center"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_gravity="center"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tvName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:textSize="17sp"
+                android:text="Roberto Prestador"
                 android:textColor="@color/colorPrimaryDark"
-                android:text="Roberto Prestador"/>
+                android:textSize="17sp" />
 
             <TextView
                 android:id="@+id/tvDescription"
-                android:text="Albañil, Pintor"
-                android:singleLine="true"
-                android:textSize="16sp"
-                android:textColor="@color/cement"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:text="Albañil, Pintor"
+                android:textColor="@color/cement"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/tvDate"
-                android:textStyle="italic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="[05/05 13:30]"/>
+                android:text="[05/05 13:30]"
+                android:textStyle="italic" />
         </LinearLayout>
 
 
