--- a/app/src/main/res/layout/item_message_left.xml
+++ b/app/src/main/res/layout/item_message_left.xml
@@ -10,23 +10,24 @@
         android:id="@+id/triangle_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/chat_left"
-        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        />
+        android:layout_centerVertical="true"
+        android:src="@drawable/chat_left" />
 
     <FrameLayout
-        android:layout_marginLeft="4dp"
-        android:layout_marginStart="4dp"
-        android:layout_toRightOf="@+id/triangle_left"
-        android:layout_toEndOf="@+id/triangle_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginLeft="4dp"
+        android:layout_marginStart="4dp"
+        android:layout_toEndOf="@+id/triangle_left"
+        android:layout_toRightOf="@+id/triangle_left"
         android:background="@drawable/bg_chat_left"
+        android:minHeight="35dp"
+        android:minWidth="105dp"
         android:orientation="horizontal">
 
         <TextView
@@ -36,7 +37,7 @@
             android:layout_gravity="bottom|end"
             android:paddingEnd="5dp"
             android:paddingRight="5dp"
-            android:text="4:13 PM"
+            android:text="09/03/2016 13:05"
             android:textColor="@android:color/darker_gray"
             android:textSize="10sp"
             android:textStyle="italic" />
@@ -47,10 +48,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start|center_vertical"
             android:layout_marginTop="1dp"
-            android:paddingBottom="5dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="5dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingTop="4dp"
             android:text="Texto de prueba         "
             android:textColor="#484848"
             android:textSize="16sp" />
