--- a/app/src/main/res/layout/item_message_right.xml
+++ b/app/src/main/res/layout/item_message_right.xml
@@ -13,12 +13,14 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:background="@drawable/bg_chat_right"
-        android:orientation="horizontal"
-        android:layout_marginRight="4dp"
         android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         android:layout_toLeftOf="@+id/triangle_right"
-        android:layout_toStartOf="@+id/triangle_right">
+        android:layout_toStartOf="@+id/triangle_right"
+        android:background="@drawable/bg_chat_right"
+        android:minHeight="35dp"
+        android:minWidth="105dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tvTime"
@@ -27,7 +29,7 @@
             android:layout_gravity="bottom|end"
             android:paddingEnd="5dp"
             android:paddingRight="5dp"
-            android:text="4:13 PM"
+            android:text="09/03/2016 13:05"
             android:textColor="@android:color/darker_gray"
             android:textSize="10sp"
             android:textStyle="italic" />
@@ -36,13 +38,13 @@
             android:id="@+id/tvMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right|center_vertical"
+            android:layout_gravity="left|center_vertical"
             android:layout_marginTop="1dp"
-            android:paddingBottom="5dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="5dp"
-            android:text="Mensaje de prueba          "
+            android:paddingBottom="10dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingTop="4dp"
+            android:text="Texto de prueba          "
             android:textColor="#484848"
             android:textSize="16sp" />
 
@@ -52,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:minHeight="30dp"
-            android:paddingBottom="10dp"
+            android:paddingBottom="16dp"
             android:paddingLeft="6dp"
             android:paddingRight="6dp"
             android:paddingTop="6dp"
@@ -63,10 +65,9 @@
         android:id="@+id/triangle_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/chat_right"
-        android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        />
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/chat_right" />
 
 </RelativeLayout>
