--- a/app/src/main/res/layout/fragment_busqueda.xml
+++ b/app/src/main/res/layout/fragment_busqueda.xml
@@ -11,7 +11,7 @@
         android:layout_height="1dp"
         android:background="@android:color/darker_gray"/>
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
@@ -21,6 +21,6 @@
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
 </LinearLayout>
