--- a/app/src/main/res/layout/activity_talk.xml
+++ b/app/src/main/res/layout/activity_talk.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.homesolution.app.ui.TalkActivity">
+    tools:context="com.homesolution.app.ui.activity.TalkActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
