--- a/app/src/main/res/layout/fragment_panel.xml
+++ b/app/src/main/res/layout/fragment_panel.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/activity_vertical_margin"
-    tools:context="com.homesolution.app.ui.PanelActivity$PlaceholderFragment">
+    tools:context="com.homesolution.app.ui.activity.PanelActivity$PlaceholderFragment">
 
     <TextView
         android:id="@+id/section_label"
