--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     android:orientation="vertical"
     android:padding="@dimen/activity_vertical_margin"
     tools:context="com.homesolution.app.ui.MainActivity">
@@ -11,16 +12,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="12dp"
-        android:text="Bienvenido a Home Solution"
+        android:layout_marginTop="4dp"
+        android:text="@string/welcome_message"
+        android:textColor="#FFF"
         android:textSize="22sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:gravity="center"
         android:orientation="vertical"
-        android:gravity="center">
+        android:visibility="invisible">
 
         <TextView
             android:layout_width="match_parent"
