--- a/app/src/main/res/layout/activity_talk.xml
+++ b/app/src/main/res/layout/activity_talk.xml
@@ -132,22 +132,12 @@
 
         <!-- To accept or reject a message -->
         <LinearLayout
-            android:visibility="gone"
+            android:visibility="visible"
             android:id="@+id/layoutAcceptReject"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             style="?android:attr/buttonBarStyle">
-
-            <Button
-                android:id="@+id/btnAcceptTalk"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@color/colorPrimary"
-                android:textColor="#fff"
-                style="?android:attr/buttonBarButtonStyle"
-                android:text="@string/talk_accept_option"/>
 
             <Button
                 android:id="@+id/btnRejectTalk"
@@ -159,6 +149,15 @@
                 style="?android:attr/buttonBarButtonStyle"
                 android:text="@string/talk_reject_option"/>
 
+            <Button
+                android:id="@+id/btnAcceptTalk"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:background="@color/colorPrimary"
+                android:textColor="#fff"
+                style="?android:attr/buttonBarButtonStyle"
+                android:text="@string/talk_accept_option"/>
         </LinearLayout>
 
     </LinearLayout>
